plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.1'
    id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
    implementation 'org.thymeleaf:thymeleaf:3.1.1.RELEASE'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:3.1.1'
    implementation group: 'commons-io', name: 'commons-io', version: '2.13.0'
    implementation 'net.datafaker:datafaker:2.0.1'

}

tasks.named('test') {
    useJUnitPlatform()
}
